--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,800&amp;display=swap" rel="stylesheet">
 <title>SIGMA 5.0 Hacked Client - Jello for Sigma</title>
 <meta content="Sigma Client Archive" property="og:title" />
-<meta content="An archive of Sigma Client including downloads" property="og:description" />
-<meta content="https://www.sigmajello.ga" property="og:url" />
 <meta content="https://raw.githubusercontent.com/SigmaJello/Archive/main/jellologo.png" property="og:image" />
 <meta content="#ffff" data-react-helmet="true" name="theme-color" />
 </head>
@@ -17,7 +15,7 @@
 </div>
 <div class="prehead">
 <div class="header-block" id="header">
-<img src="cherry/logo.png" width="308" height="72" alt="Sigma Logo"> 
+<img src="logo.png" width="308" height="72" alt="Sigma Logo"> 
 <p>Discover the Sigma and Jello merge</br>Sigma 5.0 including Jello for Sigma out NOW for <b>FREE</b></p>
 <div class="header-btns">
 <a href="#download"><div class="button">Download now</div></a>
@@ -170,7 +168,6 @@ The best client, even better.
 <div class="footer">
 <div class="sigmaprod"></div>
 <p>Copyright &copy; 2016 - 2021 by Sigma Production. All Rights Reserved.</p>
-<p>Archived by Cherry</p>
 </div>
 <div class="modalinit">
   <div class="modal-block">
@@ -178,7 +175,6 @@ The best client, even better.
   <iframe width="100%" height="209" src="https://www.youtube.com/embed/dBixUF-9-Pg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   <p>Developer LeakedPvP's channel was unfairly terminated by mistake by YouTube for 3 weeks. But it's now back! So please show him some love, support him by subscribing to his channel! More amazing content to come &#10084;</p>
   <p>Also here is the new <a href="https://www.reddit.com/r/SigmaClient/" target="_blank">Sigma Reddit</a>, make sure to join it to get updated on the community, report bugs, give feedbacks and suggestions, post memes or advertise your videos</p>
-  <p>Update: Sigma's old website is no longer working, so here is an archived version of it!</p>
   <div class="modal-button" onclick="closeModals()">Close</div>
   </div>
   </div>
